<resources>
    <string name="app_name">AndroidToolBox</string>
    <string name="Connection">Connexion</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">*********</string>
    <string name="login">Identifiant</string>
    <string name="password">Mot de passe</string>
    <string name="hello">Bonjour</string>
    <string name="lifecycle">Cycle de vie</string>
    <string name="permisssions">Permissions</string>
    <string name="save">Sauvegarde</string>
    <string name="Webservices">Webservices</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="swipe">Changer de fragment</string>
    <string name="swipeFragment">Nouveau Fragment !</string>
    <string name="deconnect">Déconnexion</string>
    <string name="FormTitle">Entrez vos informations !</string>
    <string name="firstname">Prénom</string>
    <string name="surname">Nom</string>
    <string name="dateofbirth">Date de naissance</string>
    <string name="validate">Valider</string>
    <string name="infosTitle">Accès aux informations Android</string>

</resources>
