<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/lifecycleButton"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginTop="50dp"
                android:background="@color/colorPrimaryDark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.33"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                app:srcCompat="@android:drawable/stat_notify_chat" />

            <ImageButton
                android:id="@+id/WebServicesButton"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginTop="50dp"
                android:background="@color/colorPrimaryDark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.66"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4"
                app:srcCompat="@android:drawable/stat_sys_download" />

            <ImageButton
                android:id="@+id/saveButton"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginTop="48dp"
                android:background="@color/colorPrimaryDark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.66"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                app:srcCompat="@android:drawable/stat_notify_sdcard" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="156dp"
                android:layout_height="89dp"
                android:layout_marginStart="127dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="128dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/isen_toulon" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="170dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="171dp"
                android:text="@string/hello"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <ImageButton
                android:id="@+id/permissionsButton"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginTop="50dp"
                android:background="@color/colorPrimaryDark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.33"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3"
                app:srcCompat="@android:drawable/stat_sys_speakerphone" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/permisssions"
                app:layout_constraintEnd_toEndOf="@+id/permissionsButton"
                app:layout_constraintStart_toStartOf="@+id/permissionsButton"
                app:layout_constraintTop_toBottomOf="@+id/permissionsButton" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/lifecycle"
                app:layout_constraintEnd_toEndOf="@+id/lifecycleButton"
                app:layout_constraintStart_toStartOf="@+id/lifecycleButton"
                app:layout_constraintTop_toBottomOf="@+id/lifecycleButton" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/save"
                app:layout_constraintEnd_toEndOf="@+id/saveButton"
                app:layout_constraintStart_toStartOf="@+id/saveButton"
                app:layout_constraintTop_toBottomOf="@+id/saveButton" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/Webservices"
                app:layout_constraintEnd_toEndOf="@+id/WebServicesButton"
                app:layout_constraintStart_toStartOf="@+id/WebServicesButton"
                app:layout_constraintTop_toBottomOf="@+id/WebServicesButton" />

            <Button
                android:id="@+id/deconnectButton"
                android:layout_width="154dp"
                android:layout_height="52dp"
                android:layout_marginTop="70dp"
                android:background="@color/colorPrimaryDark"
                android:text="@string/deconnect"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>